# unoriginal-name

./: CodesNshit.txt  raceauto
FIRA/fira_challenge_env/launch/: main.launch
FIRA/fira_challenge_env/worlds/: main_league.world
FIRA/launch/: main.launch
FIRA/models/: TrackMain.dae
FIRA/script/: run.sh
blender/: gate1.blend  gate1.dae  gate2.blend  gate2.dae  gate3.dae  gate4.dae  map1.blend  map1.blend1  map1.dae  map2.dae
lockndrop/: CMakeLists.txt  README.md  package.xml
lockndrop/launch/: lockndrop.launch  race.launch  sim.launch
lockndrop/models/landing_pad/: model.config  model.sdf
lockndrop/models/landing_pad/materials/scripts/: landing_pad.material
lockndrop/models/orange_cone/: model.config  model.sdf
lockndrop/models/orange_cone/meshes/: orange_cone.dae
lockndrop/models/platform/: model.config  model.sdf
lockndrop/models/platform/meshes/: platform.dae
lockndrop/scripts/: altitude_control.py  control.py  control_homing.py  detector.py  flight_controller.py  lh_control.py  mission_manager.py  ram.py  yaw_control.py
lockndrop/worlds/: lockndrop_challenge.world
models/Heli/: model.config  model.sdf
models/Track/: model.config
models/map2/: model.config  model.sdf
race_auto/: CMakeLists.txt  package.xml
race_auto/launch/: race_world.launch
race_auto/models/Track/: model.sdf
race_auto/models/race/: model.config  model.sdf
race_auto/models/race/meshes/: race.dae
race_auto/scripts/: detector.py  stalk.py  test.py  test1.py  test2.py  test4.py  tracker.py  vision.py
race_auto/worlds/: raceauto.sdf
